feat: make port configurable with default to match recipe docs

--- a/oauth2-google/example.env
+++ b/oauth2-google/example.env
@@ -1,3 +1,4 @@
+APP_PORT = "3300" ## port on which the app will run
 GOOGLE_CLIENT_ID = "" ## google client , get it from https://console.developers.google.com/
 GOOGLE_CLIENT_SECRET = "" # secret of the client
 GOOGLE_REDIRECT_URL = "" # redirect url you added in your google oauth api, make sure the url is same including the port, should match the route of callback
