--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,14 +2,17 @@
 # https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file#directories
 
 version: 2
+
 updates:
   - package-ecosystem: "github-actions"
+    open-pull-requests-limit: 15
     directory: "/"
     labels:
       - "🤖 Dependencies"
     schedule:
       interval: "daily"
   - package-ecosystem: "gomod"
+    open-pull-requests-limit: 15
     directories:
       - "**/*"
     labels:
@@ -17,6 +20,7 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "npm"
+    open-pull-requests-limit: 15
     directories:
       - "**/*"
     labels:
@@ -24,6 +28,7 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "docker"
+    open-pull-requests-limit: 15
     directories:
       - "**/*"
     labels:
