Cleanup Docker image tags

--- a/auth-docker-postgres-jwt/Dockerfile
+++ b/auth-docker-postgres-jwt/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.24@sha256:d9db32125db0c3a680cfb7a1afcaefb89c898a075ec148fdc2f0f646cc2ed509
+FROM golang:1.24
 
 # Enviroment variable
 WORKDIR /usr/src/some-api
