--- a/docker-mariadb-clean-arch/Dockerfile
+++ b/docker-mariadb-clean-arch/Dockerfile
@@ -1,5 +1,5 @@
 # Get Go image from DockerHub.
-FROM golang:1.24@sha256:d9db32125db0c3a680cfb7a1afcaefb89c898a075ec148fdc2f0f646cc2ed509 AS api
+FROM golang:1.24 AS api
 
 # Set working directory.
 WORKDIR /compiler
