--- a/docker-nginx-loadbalancer/docker-compose.yml
+++ b/docker-nginx-loadbalancer/docker-compose.yml
@@ -1,6 +1,3 @@
-version: '3.3'
-
-#services describe the containers that will start
 services:
   # api is the container name for our Go API
   api:
@@ -19,8 +16,8 @@ services:
       replicas: 5
   # nginx container
   nginx:
-    # specifies the latest stable alpine nginx image
-    image: nginx:stable-alpine
+    # specifies the latest stable nginx image
+    image: nginx:stable
     # Connects the conf file of the container to the conf file in our folder
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
