--- a/rabbitmq/worker/Dockerfile
+++ b/rabbitmq/worker/Dockerfile
@@ -1,5 +1,5 @@
 
-FROM golang:1.24-alpine@sha256:7772cb5322baa875edd74705556d08f0eeca7b9c4b5367754ce3f2f00041ccee AS builder
+FROM golang:1.24 AS builder
 
 # Move to working directory (/build).
 WORKDIR /build
