--- a/react-router/Dockerfile
+++ b/react-router/Dockerfile
@@ -1,5 +1,5 @@
 # First stage: Get Golang image from DockerHub.
-FROM golang:1.24@sha256:d9db32125db0c3a680cfb7a1afcaefb89c898a075ec148fdc2f0f646cc2ed509 AS backend-builder
+FROM golang:1.24 AS backend-builder
 
 # Label this container.
 LABEL appname="React App Fiber"
