--- a/aws-ses-sender/Dockerfile
+++ b/aws-ses-sender/Dockerfile
@@ -15,6 +15,7 @@ RUN apk --no-cache add ca-certificates
 
 WORKDIR /root/
 
+COPY --from=builder /usr/src/app/.env .env
 COPY --from=builder /usr/src/app/app .
 
 CMD ["./app"]
