Fix Auth Jwt Recipe Bugs

--- a/auth-jwt/.env.sample
+++ b/auth-jwt/.env.sample
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=
-DB_NAME=
-SECRET=
+DB_PASSWORD=pgp@ssword
+DB_NAME=auth_db
+SECRET=sup3rs@cret
