--- a/auth-jwt/.env.sample
+++ b/auth-jwt/.env.sample
@@ -1,6 +1,7 @@
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=pgp@ssword
-DB_NAME=auth_db
-SECRET=sup3rs@cret
+DB_PASSWORD=
+DB_NAME=
+SECRET=
+ACCESS_TOKEN_TTL_MINUTES=15
