Add tinylib-modules to dependabot configuration

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -94,6 +94,9 @@ updates:
       rivo-modules:
         patterns:
           - "github.com/rivo/**"
+      tinylib-modules:
+        patterns:
+          - "github.com/tinylib/**"
       gorilla-modules:
         patterns:
           - "github.com/gorilla/**"
